responsive test + css fix + code clean

--- a/src/Components/Start/style.css
+++ b/src/Components/Start/style.css
@@ -1,4 +1,6 @@
-.up_container {
+@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@300&family=Hind:wght@300&display=swap');
+
+.up-container {
     background-color: rgba(217, 217, 217, 1);
     width: 95%;
     max-width: 100%;
@@ -7,7 +9,7 @@
     border-radius: 10px;
 }
 
-.welcome_text {
+.welcome-text {
     font-family: 'Hind', sans-serif;
     font-weight: bold;
     font-size: 1.3rem;
@@ -15,57 +17,50 @@
 }
 
 
-.under_container {
+.form {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 70%;
-    max-width: 100%;
-    margin: 50px;
-    background-color: linear-gradient(45deg, #1A6DED, #CCD7BE, #51ED1A);
-    padding: 20px;
-    border-radius: 10px;
 }
 
-.rules h3,
-ul {
-    font-family: 'Hind', sans-serif;
-}
-
-.start form {
-    display: flex;
-    flex-direction: column;
-    margin-top: 150px;
-}
-
-.start form input {
+.form input {
     width: 80%;
-    margin: 0 auto;
+    margin: 20px auto;
+    font-size: 1.3rem;
+}
+
+.form input::placeholder {
+    padding: 1.2rem;
+    font-style: italic;
     font-size: 1rem;
 }
 
-.start form input::placeholder {
-    padding: 10px;
-    font-style: italic;
-    font-size: .8rem;
-}
-
-.start form button {
+.form button {
     width: 40%;
     margin: 10px auto;
     height: 40px;
     border: none;
     border-radius: 10px;
-    background-color: rgba(217, 217, 217, 0.3);
+    background-color: rgba(22, 43, 61);
     box-shadow: 2px 2px 8px rgba(186, 186, 186, 0.3);
     font-size: 1.3rem;
-    color: rgba(252, 244, 244, 1);
-    text-shadow: 3px 3px 10px rgba(67, 3, 64, 1);
+    color: rgba(249, 236, 228, 1);
+    text-shadow: 2px 2px 8px rgba(249, 236, 228, 0.7);
     font-family: 'Gemunu Libre', sans-serif;
     text-transform: uppercase;
 }
 
-.start form button:hover {
-    background-color: rgba(202, 217, 255, 0.380);
+.form button:hover {
+    background-color: #F9ECE4;
     cursor: pointer;
+    color: black;
+    text-shadow: 2px 2px 8px grey;
+    box-shadow: 2px 2px 8px rgba(22, 43, 61);
+}
+
+.under-container {
+    width: 70%;
+    max-width: 100%;
+    background-image: linear-gradient(155deg, rgba(26, 109, 237, .4), rgba(204, 215, 190, .3), rgba(81, 237, 26, .3));
+    border-radius: 10px;
 }
