--- a/src/Components/Game/style.css
+++ b/src/Components/Game/style.css
@@ -1,4 +1,4 @@
-.up_container {
+.up-container {
     background-color: rgba(217, 217, 217, 1);
     width: 95%;
     max-width: 100%;
@@ -7,7 +7,7 @@
     border-radius: 10px;
 }
 
-.up_container .opacity_text {
+.opacity-text {
     font-family: 'Hind', sans-serif;
     color: rgba(0, 0, 0, 0.54);
     font-size: 1.2rem;
@@ -18,21 +18,34 @@
     text-align: center;
 }
 
-.up_container p {
+.question-text {
     text-align: center;
     font-family: 'Hind', sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
+    color: black;
 }
 
-.answers {
+
+.under-container {
+    width: 70%;
+    max-width: 100%;
+    background-image: linear-gradient(155deg, rgba(26, 109, 237, .4), rgba(204, 215, 190, .3), rgba(81, 237, 26, .3));
+    border-radius: 10px;
+}
+
+#answers {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
 }
 
 #btn {
-    font-size: 1rem;
+    text-align: center;
     font-family: 'Hind', sans-serif;
+    font-size: 1.2rem;
+    font-weight: bold;
     color: black;
     padding: 15px;
     margin: 15px;
@@ -42,7 +55,7 @@
     box-shadow: 2px 2px 8px rgba(186, 186, 186, 0.3);
 }
 
-.under_container #btn:hover {
+#btn:hover {
     background-color: #F9ECE4;
     cursor: pointer;
 }
@@ -53,24 +66,5 @@
     font-size: 1.2rem;
     font-family: 'Gemunu Libre', sans-serif;
     color: rgba(202, 217, 255, 1);
-    margin: 50px auto -10px auto;
-}
-
-.under_container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    width: 70%;
-    max-width: 100%;
-    margin: 50px;
-    background-color: linear-gradient(#1A6DED, #CCD7BE, #51ED1A);
-    padding: 20px;
-    border-radius: 10px;
-}
-
-.hidden {
-    display: none;
-}
-.visible {
-    display: initial;
+    margin: 40px auto -10px auto;
 }
